Worked on the Employment page, added all but retail

--- a/employment.html
+++ b/employment.html
@@ -23,18 +23,134 @@
                 <h2>United States Postal Service</h2>
               </div> <!--ph4-->
               <div class="position">
-                <h3>Rural Carrier Assistant</h3>
+                <h3>Rural Carrier Assistant -- Jan 2018 to Current</h3>
+                <h4>Covington, Louisiana</h4>
               </div>
-                <ul class="responsibilitues">
+                <ul class="responsibilities">
                   <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
                   <li>Sorted postal flats, letters, packages, and magazines based on addresses and names. </li>
                   <li>Loaded truck by properly securing items to prevent damage during transportation.</li>
-
+                  <li>Collected money for postage-due and COD fees and obtained signed receipts for registered, certified, and insured mail.</li>
+                  <li>Operated hand-held scanning device to track items delivered.</li>
+                  <li>Sorted mail and packages in post office or delivery vehicle to prepare for daily delivery. </li>
+                  <li>Collected mail on the daily route, bringing in parcels from homes, businesses and area mailboxes.</li>
+                  <li>Properly accounted for and turned in all money collected during the mail route.</li>
+                  <li>Assisted team members and managers with tasks to maintain productivity and meet project milestones.</li>
                 </ul>
             </div> <!--E1-->
             <br />
+            <div class="E2">
+              <div class="ph4">
+                <h2>Lobbs Horticultural</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>Horticulture Technician -- Feb 2017 to Jan 2018</h3>
+                <h4>Lacombe, Louisiana</h4>
+              </div>
+                <ul class="responsibilities">
+                  <li>Identified specific plants and developed strong understanding of unique life cycles to provide optimized care.</li>
+                  <li>Maintained plants through planting, trimming, and fertilizing for proper maintenance. </li>
+                  <li>Assessed different fertilizer techniques with complex testing methods to help alleviate negative impacts such as denitrification in field applications.</li>
+                  <li>Examined collected plant specimens to identify problems such as diseases and infections.</li>
+                  <li>Supervised locations to eliminate problems such as pests from lawns and gardens, including selecting chemicals, application methods, and schedules.</li>
+                </ul>
+            </div> <!--E2-->
+            <br />
+            <div class="E3">
+              <div class="ph4">
+                <h2>CMI (Cable Marketing & Installation)</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>Dispatch Supervisor -- Jan 2015 to Mar 2016</h3>
+                <h4>Slidell, Louisiana</h4>
+              </div>
+                <ul class="responsibilities">
+                  <li>Oversaw the day to day functions of the dispatch office and team.</li>
+                  <li>Organized the routes for the different markets and cable install crews throughout Southern Louisiana.</li>
+                  <li>Utilized the daily, weekly and annual reports to maximize daily workflow.</li>
+                  <li>Worked with dispatch software and adjusted throughout the day to accommodate added jobs and installs from Spectrum TV (we were contracted to them)</li>
+                  <li>Worked closely with Spectrum dispatchers and tech support and my team.</li>
+                  <li>Used Microsoft Office for all communications of reports, emails and such.</li>
+                </ul>
+            </div> <!--E3-->
+            <br />
+            <div class="E4">
+              <div class="ph4">
+                <h2>Friction Stir Link</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>QA/QC Supervisor -- Nov 2013 to Jan 2015 then Mar 2016 to Feb 2017</h3>
+                <h4>Slidell, Louisiana</h4>
+              </div>
+                <ul class="responsibilities">
+                  <li>Established final inspection procedure and matched job specifications.</li>
+                  <li>Completed quality control and inspection sheets in accordance with ISO standards for maximum benefit.</li>
+                  <li>Inspected and tested raw materials and assemblies to prevent serious downstream errors. </li>
+                  <li>Reported on non-conformance issues and documented findings in forms to help production staff understand and correct problems.</li>
+                  <li>Verified calibration and functionality of inspection equipment, machinery, and tools for proper quality control.</li>
+                  <li>Monitored team operations to check and maintain compliance with OSHA requirements and internal policies.</li>
+                  <li>Liaised between prefabrication and fabrication areas and engineering team members to resolve misunderstood, unclear, and incorrect information.</li>
+                  <li>Measured the dimensions of completed products to verify their compliance with the documented production specifications.</li>
+                  <li>Witnessed processes and inspected completed assemblies and major components.</li>
+                  <li>Provided required documentation and certifications of compliance to meet customers' needs. </li>
+                  <li>Obtained and studied drawings and specifications and checked work instructions prior to inspecting production.</li>
+                  <li>Rejected non-compliant assembly and installation, documenting non-compliance and locations and noting correct configuration required based on related drawings, specifications, and plans. </li>
+                  <li>Communicated product, process, and documentation discrepancies to correct problems and achieve process improvements.</li>
+                  <li>Sampled products and conducted tests such as Visual Testing and Liquid Penetrant Testing to determine their quality.</li>
+                </ul>
+            </div> <!--E4-->
+            <br />
+            <div class="E5">
+              <div class="ph4">
+                <h2>Lowes</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>Department Supervisor - Garden -- Jun 2011 to Nov 2013</h3>
+                <h4>Slidell, Louisiana</h4>
+              </div>
+                <ul class="responsibilities">
+                  <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
+                  <li>Sorted postal flats, letters, packages, and magazines based on addresses and names. </li>
+                  <li>Loaded truck by properly securing items to prevent damage during transportation.</li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+            </div> <!--E5-->
+            <br />
+            <div class="E6">
+              <div class="ph4">
+                <h2>The Home Depot</h2>
+              </div> <!--ph4-->
+              <div class="position">
+                <h3>Opperations Assistant Store Manager then Merchandising Assistant Store Manager -- Nov 2004 to Jun 2011</h3>
+                <h4>Picayune, Mississippi then Slidell, Louisiana</h4>
+              </div>
+                <ul class="responsibilities">
+                  <li>Demonstrated and promoted safe driving methods, consistently adhering to state traffic rules and regulations.</li>
+                  <li>Sorted postal flats, letters, packages, and magazines based on addresses and names. </li>
+                  <li>Loaded truck by properly securing items to prevent damage during transportation.</li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+            </div> <!--E6-->
             </div> <!--pythonbody--> 
-        </div>
+        </div> <!--mainbody-->
+        <div class="footer">
+          <img class="foot" src="./resources/images/logo.png" alt="Logo" width="75">
+          <a class="foot name">&copy; Terry Baillie 2022</a>  
+          <a href="http://www.facebook.com/maddarr/" class=" foot facebook"><img id="fb" src="./resources/images/fb.png" width="50"></a> 
+          <a href="http://www.instagram.com/a_fat_aussie_abroad" class=" foot instagram"><img id="fb" src="./resources/images/Insta.png" width="50"></a>
+        </div> <!--footer--> 
    </div> <!--GRIDBODY-->
    </body>
  </html>
