--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="navigation">
           <ul class="nav home">
-          <button><a href="./employment.html">Employment/ Experience</a></button>
+          <button><a href="./employment.html">About/ Employment</a></button>
           <br />
           <button><a href="./certificates.html">Certifications</a></button>
           <br />
