fixed button size in media

--- a/certificates.html
+++ b/certificates.html
@@ -8,7 +8,7 @@
      <div class="gridbody">
       <div class="nav">
         <div class="heading">
-          <img id="headingimg" src="./resources/images/me.jpeg">
+          <!--<img id="headingimg" src="./resources/images/me.jpeg">-->
           <h1 id="headingname">Certifications </h1>
           <div class="navigation">
             <ul class="nav portfolio">
