--- a/employment.html
+++ b/employment.html
@@ -7,7 +7,7 @@
    <body>
      <div class="gridbody">
       <div class="heading">
-        <img id="headingimg" src="./resources/images/me.jpeg">
+        <!--<img id="headingimg" src="./resources/images/me.jpeg">-->
         <h1 id="headingname">About me/ Employment History </h1>
         <div class="navigation">
           <ul class="nav portfolio">
@@ -22,8 +22,8 @@
           <div class="E7">
             <div class="aboutme">
               <h2>Terry Baillie</h2>
-              <h3 class="about">I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004 and have never looked back and have worked in many fields over that time until now.</h3>
-              <h3 class="about">I enjoy seeing new and different parts of this country together with my wife and children, Building models for relaxation and working on our classic 86 Porsche 928.</h3>
+              <h3 class="about">I'm originally from Australia but after meeting and marrying a great American Lady, I migrated to the USA in 2004, never looked back and have worked in many fields over that time.</h3>
+              <h3 class="about">I enjoy seeing new and different parts of this country together with my wife and children, building models for relaxation and working on our classic 86 Porsche 928.</h3>
             </div> <!--aboutme-->
             <br />
             <div class="position">
