--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
      <a id="top"></a>
     <div class="gridbody">
       <div class="heading">
-        <img id="headingimg" src="./resources/images/me.jpeg">
+        <!--<img id="headingimg" src="./resources/images/me.jpeg">-->
         <h1 id="headingname">Portfolio </h1>
         <div class="navigation">
           <ul class="nav portfolio">
