started history society page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <p class="foot name"> &copy; Terry Baillie 2022 </p>  
           <a href="http://www.facebook.com/maddarr/" class=" foot facebook"><img id="fb" src="./resources/images/fb.png" width="50"></a> 
           <a href="http://www.instagram.com/a_fat_aussie_abroad" class=" foot instagram"><img id="fb" src="./resources/images/Insta.png" width="50"></a>
+          <a href="./history.html">Historical Society</a>
         </div> <!--footer-->
 
       </div> <!--gridbody-->
