added Java Script certification

--- a/certificates.html
+++ b/certificates.html
@@ -34,6 +34,7 @@
             <img src="./resources/images/LHTML.png" alt="HTML">
             <img src="./resources/images/LP3.png" alt="Python3">
             <img src="./resources/images/Web.jpg" alt="Build a webpage">
+            <img src="./resources/images/LJS.png" alt="Java Script">
           </div> <!--C1-->
           <br />
           <div class="C2">
