adjusted description of certifications

--- a/certificates.html
+++ b/certificates.html
@@ -26,7 +26,7 @@
             </div> <!--ph2-->
             <div class="c port">
               <p>Below are all the certifications I have currently recieved since enrolling in the pro courses at Codecademy.</p>
-              <p>Currently I am working on the Front End Engineer Career Path and Learn JavaScript courses.</p>
+              <p>Currently I am working on the Front End Engineer Career Path.</p>
             </div> <!--paragraphs for portfolio-->
             <img src="./resources/images/LCLine.png" alt="Command Line">
             <img src="./resources/images/LCSS.png" alt="CSS Beginer">
