--- a/history.html
+++ b/history.html
@@ -1,23 +1,58 @@
 <!DOCTYPE html>
   <html>
     <head>
-     <title>Terry Baillie</title>
+     <title>Erica and District Historical Society Inc.</title>
      <link href="./resources/css/history.css" type='text/css' rel="stylesheet">
     </head>
     <body>
-      <div class="gridbody">
-
+      <div class="mainbody">
         <div class="heading">
+          <div id="logo"> <img src="./resources/images/History/logo.png"></div>
+          <div id="title">
+            <h1>ERICA</h1>
+            <h2>& District Historical Society</h2>
+          </div> <!--title-->
+          <div id="linksTop">
+            <ul>
+              <li><a href=""><em>Thompson Times & Tall Timber Tales</em></a></li>
+              <li><a href=""><em>Bric-a-Brac & Op-Shop</em></a></li>
+              <li><a href=""><em>About</em></a></li>
+             </ul>
+          </div> <!--linksTop-->
         </div> <!--heading-->
-
-        <div class="navigation">
-        </div> <!--navigation-->
+        <div class="rightBody">
+          <img src="./resources/images/History/map1.jpeg" style="width: 50%;" >
+        </div> <!--rightBody-->
+        <div class="leftBody">
+          <h3>The Purposes/ Aims of the Association are - </h3>
+          <p>To promote within the general community a knowledge of, and enthusiasm for, 
+            the historical, cultural and environmental heritage of Erica; including, but 
+            not limited to the towns and settlements of her districts; namely Moondarra,
+            Rawson, Parkers Corner, Coopers Creek, Jubilee, Jacobs Creek, Caringal, Gould and
+            Tyres Junction by :
+          </p>
+          <ul id="linksLeft">
+            <li>The collection and preservation of materials of historical interest
+              related to the area; including oral histories.
+            </li>
+            <br />
+            <li>The provision of a library and archives collection.</li>
+            <br />
+            <li>The dissemination of knowledge of Erica and her districts history through
+              a newsletter, publications, excursions and by other means.
+            </li>
+            <br />
+            <li>The encouragement of the renovation, preservation and maintenance of
+              historical sites and buildings.
+            </li>
+          </ul>
+        </div> <!--leftBody-->
+        
 
         <div class="footer">
-          <img class="foot" src="" alt="Logo">
-          <p class="foot name"> &copy; By Terry Baillie 2022 </p>  
+          <img class="foot" src="./resources/images/History/logo.png" alt="Logo">
+          <p class="footname"> &copy; By Terry Baillie 2022 </p>  
         </div> <!--footer-->
-
-      </div> <!--gridbody-->
+      </div> <!--mainbody-->
    </body>
  </html>
