--- a/history.html
+++ b/history.html
@@ -6,20 +6,18 @@
     </head>
     <body>
       <div class="mainbody">
-        <div class="heading">
-          <div id="logo"> <img src="./resources/images/History/logo.png"></div>
-          <div id="title">
-            <h1>ERICA</h1>
-            <h2>& District Historical Society</h2>
-          </div> <!--title-->
-          <div id="linksTop">
+
+          <div class="heading">
+            <img src="./resources/images/History/logo.png" alt="Logo">
+            <h1>Erica & District Historical Society Inc.</h1>
             <ul>
-              <li><a href=""><em>Thompson Times & Tall Timber Tales</em></a></li>
-              <li><a href=""><em>Bric-a-Brac & Op-Shop</em></a></li>
-              <li><a href=""><em>About</em></a></li>
-             </ul>
-          </div> <!--linksTop-->
-        </div> <!--heading-->
+            <li><a href="#">Thompson Times & Tall Timber Tales </a></li>
+            <li><a href="#">Bric-a-Brac & Op-Shop </a></li>
+            <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+          
+
         <div class="leftBody">
           <h3>The Purposes/ Aims of the Association are - </h3>
           <p>To promote within the general community a knowledge of, and enthusiasm for, 
