--- a/history.html
+++ b/history.html
@@ -10,12 +10,15 @@
           <div class="heading">
             <img src="./resources/images/History/logo.png" alt="Logo">
             <h1>Erica & District Historical Society Inc.</h1>
-            <ul>
-            <li><a href="#">Thompson Times & Tall Timber Tales </a></li>
-            <li><a href="#">Bric-a-Brac & Op-Shop </a></li>
-            <li><a href="#">Contact</a></li>
+          </div>
+          <br/>
+          <nav class="nav">
+            <ul id="navigation">
+              <li><a href="#">Thompson Times & Tall Timber Tales </a></li>
+              <li><a href="#">Bric-a-Brac & Op-Shop </a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
-        </div>
+          </nav>
         <br />
         <div class="leftBody">
           <h3>The Purposes/ Aims of the Association are - </h3>
