--- a/history.html
+++ b/history.html
@@ -20,36 +20,42 @@
             </ul>
           </nav>
         <br />
-        <div class="leftBody">
-          <h3>The Purposes/ Aims of the Association are - </h3>
-          <p>To promote within the general community a knowledge of, and enthusiasm for, 
+        <div class="pagebody">
+          <div class="leftBody">
+            <h3>The Purposes/ Aims of the Association are - </h3>
+            <p>To promote within the general community a knowledge of, and enthusiasm for, 
             the historical, cultural and environmental heritage of Erica; including, but 
             not limited to the towns and settlements of her districts; namely Moondarra,
             Rawson, Parkers Corner, Coopers Creek, Jubilee, Jacobs Creek, Caringal, Gould and
             Tyres Junction by :
-          </p>
-          <ul id="linksLeft">
-            <li>The collection and preservation of materials of historical interest
+            </p>
+            <ul id="linksLeft">
+              <li>The collection and preservation of materials of historical interest
               related to the area; including oral histories.
-            </li>
-            <br />
-            <li>The provision of a library and archives collection.</li>
-            <br />
-            <li>The dissemination of knowledge of Erica and her districts history through
+             </li>
+              <br />
+              <li>The provision of a library and archives collection.</li>
+              <br />
+             <li>The dissemination of knowledge of Erica and her districts history through
               a newsletter, publications, excursions and by other means.
-            </li>
-            <br />
-            <li>The encouragement of the renovation, preservation and maintenance of
+              </li>
+              <br />
+              <li>The encouragement of the renovation, preservation and maintenance of
               historical sites and buildings.
-            </li>
-          </ul>
-        </div> <!--leftBody-->
-        
-
+              </li>
+            </ul>
+          </div> <!--leftBody-->
+          <div class="rightBody">
+            <h3>Map of Erica and her districts</h3>
+            <img src="./resources/images/History/map1.jpeg" width="50%" >
+          </div>
+        </div> <!--pagebody-->
+        <br />
+        <br />
+        </div> <!--mainbody-->
         <div class="footer">
           <img class="foot" src="./resources/images/History/logo.png" alt="Logo">
           <p class="footname"> &copy; By Terry Baillie 2022 </p>  
         </div> <!--footer-->
-      </div> <!--mainbody-->
    </body>
  </html>
