--- a/history.html
+++ b/history.html
@@ -51,6 +51,11 @@
           </div>
         </div> <!--pagebody-->
         <br />
+        <div class="pageBodyMid">
+          <img src="./resources/images/History/Pic1.jpeg" width="75%">
+          <img src="./resources/images/History/Pic2.jpeg" width="75%">
+          <img src="./resources/images/History/Pic3.jpeg" width="75%" >
+        </div> <!--pageBodyMid-->
         <br />
         </div> <!--mainbody-->
         <div class="footer">
