added captions to the photos

--- a/history.html
+++ b/history.html
@@ -52,9 +52,18 @@
         </div> <!--pagebody-->
         <br />
         <div class="pageBodyMid">
-          <img src="./resources/images/History/Pic1.jpeg" width="75%">
-          <img src="./resources/images/History/pic2.jpeg" width="75%">
-          <img src="./resources/images/History/pic3.jpeg" width="75%" >
+          <div class="pic1">
+            <img src="./resources/images/History/Pic1.jpeg" width="75%">
+            <figcaption id="pic1">Sarah Robins & Pricilla Cole. Robins Family Collection</figcaption>
+          </div>
+          <div class="pic2">
+            <img src="./resources/images/History/pic2.jpeg" width="75%">
+            <figcaption id="pic2">Tom Holmes & Arthur Chapman, Moondarra district C. 1915. Img. Museum Victoria</figcaption>
+          </div>
+          <div class="pic3">
+            <img src="./resources/images/History/pic3.jpeg" width="75%" >
+            <figcaption id="pic3">Erica School Agriculture Block. Head Teacher James A Towner. C.1920. Photographer W. Edmends. Aitken Family Collection.</figcaption>
+          </div>
         </div> <!--pageBodyMid-->
         <br />
         </div> <!--mainbody-->
