played with bric a brac

--- a/history.html
+++ b/history.html
@@ -15,7 +15,7 @@
           <nav class="nav">
             <ul id="navigation">
               <li><a href="#">Thompson Times & Tall Timber Tales </a></li>
-              <li><a href="#">Bric-a-Brac & Op-Shop </a></li>
+              <li><a href="#BB">Bric-a-Brac & Op-Shop </a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
@@ -66,6 +66,17 @@
           </div>
         </div> <!--pageBodyMid-->
         <br />
+        <div id="BB"></div>
+        <div class="pageBodyBricaBrac">
+          <div class="bricHeader">
+            <h2>Bric a Brac @ Rawson</h2>
+            <h3>Open Wednesday 10 to 2pm and other times as advertised</h3>
+          </div> <!--brickHeader-->
+          <br />
+          <div class="bricMap">
+            <img src="./resources/images/History/BricMap.png">
+          </div> <!--bricMap-->
+        </div> <!--pageBodyBricaBrac-->
         </div> <!--mainbody-->
         <div class="footer">
           <img class="foot" src="./resources/images/History/logo.png" alt="Logo">
