changed it all up

--- a/history.html
+++ b/history.html
@@ -1,86 +1,31 @@
 <!DOCTYPE html>
   <html>
-    <head>
+    <head> <!--head start-->
      <title>Erica and District Historical Society Inc.</title>
      <link href="./resources/css/history.css" type='text/css' rel="stylesheet">
-    </head>
-    <body>
-      <div class="mainbody">
-
-          <div class="heading">
-            <img src="./resources/images/History/logo.png" alt="Logo">
-            <h1>Erica & District Historical Society Inc.</h1>
-          </div>
-          <br/>
-          <nav class="nav">
-            <ul id="navigation">
-              <li><a href="#">Thompson Times & Tall Timber Tales </a></li>
-              <li><a href="#BB">Bric-a-Brac & Op-Shop </a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
+    </head> <!--head end-->
+    <body> <!--body start-->
+      <div class="mainContainer"> <!--mainContainer start-->
+        <div class="heading"> <!--heading start-->
+          <h1>Erica & District Historical Society</h1>
+        </div> <!--heading end-->
+        <div class="navigation"> <!--navigation start-->
+          <nav id="nav">
+            <a href="#"><h4>History</h4></a>
+            <a href="#"><h4>Newsletters</h4></a>
+            <a href="#"><h4>About Us</h4></a>
+            <a href="#"><h4>Contact Us</h4></a>
           </nav>
-        <br />
-        <div class="pagebody">
-          <div class="leftBody">
-            <h3>The Purposes/ Aims of the Association are - </h3>
-            <p>To promote within the general community a knowledge of, and enthusiasm for, 
-            the historical, cultural and environmental heritage of Erica; including, but 
-            not limited to the towns and settlements of her districts; namely Moondarra,
-            Rawson, Parkers Corner, Coopers Creek, Jubilee, Jacobs Creek, Caringal, Gould and
-            Tyres Junction by :
-            </p>
-            <ul id="linksLeft">
-              <li>The collection and preservation of materials of historical interest
-              related to the area; including oral histories.
-             </li>
-              <br />
-              <li>The provision of a library and archives collection.</li>
-              <br />
-             <li>The dissemination of knowledge of Erica and her districts history through
-              a newsletter, publications, excursions and by other means.
-              </li>
-              <br />
-              <li>The encouragement of the renovation, preservation and maintenance of
-              historical sites and buildings.
-              </li>
-            </ul>
-          </div> <!--leftBody-->
-          <div class="rightBody">
-            <h3>Map of Erica and her districts</h3>
-            <img src="./resources/images/History/map1.jpeg" width="50%" >
-          </div>
-        </div> <!--pagebody-->
-        <br />
-        <div class="pageBodyMid">
-          <div class="pic1">
-            <img src="./resources/images/History/Pic1.jpeg" width="75%">
-            <figcaption id="pic1">Sarah Robins & Pricilla Cole. Robins Family Collection</figcaption>
-          </div>
-          <div class="pic2">
-            <img src="./resources/images/History/pic2.jpeg" width="75%">
-            <figcaption id="pic2">Tom Holmes & Arthur Chapman, Moondarra district C. 1915. Img. Museum Victoria</figcaption>
-          </div>
-          <div class="pic3">
-            <img src="./resources/images/History/pic3.jpeg" width="75%" >
-            <figcaption id="pic3">Erica School Agriculture Block. Head Teacher James A Towner. C.1920. Photographer W. Edmends. Aitken Family Collection.</figcaption>
-          </div>
-        </div> <!--pageBodyMid-->
-        <br />
-        <div id="BB"></div>
-        <div class="pageBodyBricaBrac">
-          <div class="bricHeader">
-            <h2>Bric a Brac @ Rawson</h2>
-            <h3>Open Wednesday 10 to 2pm and other times as advertised</h3>
-          </div> <!--brickHeader-->
-          <br />
-          <div class="bricMap">
-            <img src="./resources/images/History/BricMap.png">
-          </div> <!--bricMap-->
-        </div> <!--pageBodyBricaBrac-->
-        </div> <!--mainbody-->
-        <div class="footer">
-          <img class="foot" src="./resources/images/History/logo.png" alt="Logo">
-          <p class="footname"> &copy; By Terry Baillie 2022 </p>  
-        </div> <!--footer-->
-   </body>
+        </div><!--navigation end-->
+        <div class="interior"> <!--interior start-->
+          <h2>Introduction</h2>
+          <p>The Erica and Districts Historical Society Inc. is a non-profit organization committed to documenting,
+            preserving and promoting the history of our area, run entirely by volunteers.
+          </p>
+          <p>The Society was formally incorporated in October of 2014 by a group of residents who recognised the 
+            importance of preserving all aspects of our local history for the benefit of present and future generations.
+          </p>
+        </div> <!--interior end-->
+      </div> <!--mainContainer end-->
+    </body> <!--body end-->
  </html>
