changed font sizing

--- a/history.html
+++ b/history.html
@@ -13,8 +13,8 @@
           <nav id="nav">
             <a href="#"><h4>History</h4></a>
             <a href="#"><h4>Newsletters</h4></a>
-            <a href="#"><h4>About Us</h4></a>
-            <a href="#"><h4>Contact Us</h4></a>
+            <a href="#"><h4>About</h4></a>
+            <a href="#"><h4>Contact</h4></a>
           </nav>
         </div><!--navigation end-->
         <div class="interior"> <!--interior start-->
