added text, logo and pages

--- a/historyNewsletter.html
+++ b/historyNewsletter.html
@@ -11,8 +11,8 @@
         </div> <!--heading end-->
         <div class="navigation"> <!--navigation start-->
           <nav id="nav">
+            <a href="./history.html"><h4>Home</h4></a>
             <a href="#"><h4>History</h4></a>
-            <a href="./historyNewsletter.html"><h4>Newsletters</h4></a>
             <a href="./historyAbout.html"><h4>About</h4></a>
             <a href="./historyContact.html"><h4>Contact</h4></a>
           </nav>
@@ -27,9 +27,6 @@
           </p>
           <br />
           <p><em>Open Days: </em>Every Wednesday, 10 - 2pm or by appointment</p>
-          <div class="logo"> <!--logo start-->
-            <img src="./resources/images/History/logo.png">
-          </div> <!--logo end-->
           <ul id="membersTop"> <!--membersTop start-->
           <h2>Committee Members for 2021/ 2022</h2>  
           <p><em>President: </em>Not exactly sure</p>
