Made many adjustments to all pages

--- a/historyAbout.html
+++ b/historyAbout.html
@@ -7,34 +7,30 @@
     <body> <!--body start-->
       <div class="mainContainer"> <!--mainContainer start-->
         <div class="heading"> <!--heading start-->
-          <h1>Erica & District Historical Society</h1>
+          <h1>Erica & District Historical Society Inc.</h1>
         </div> <!--heading end-->
         <div class="navigation"> <!--navigation start-->
           <nav id="nav">
             <a href="./history.html"><h4>Home</h4></a>
-            <a href="./historyNewsletter.html"><h4>Newsletters</h4></a>
-            <a href="#"><h4>History</h4></a>
-            <a href="./historyContact.html"><h4>Contact</h4></a>
           </nav>
         </div><!--navigation end-->
         <div class="interior"> <!--interior start-->
-          <h2>Introduction</h2>
-          <p>The Erica and Districts Historical Society Inc. is a non-profit organization committed to documenting,
-            preserving and promoting the history of our area, run entirely by volunteers.
+          <img id="wave" src="./resources/images/History/top.png">
+          <h2>The Purposes/ Aims of the Association are:</h2>
+          <p>To promote in the general community a knowledge of and enthusiasm for, the historical, cultural and
+            environmental heritage of Erica; Including, but not limited to the towns and settlements of her districts.
           </p>
-          <p>The Society was formally incorporated in October of 2014 by a group of residents who recognised the 
-            importance of preserving all aspects of our local history for the benefit of present and future generations.
-          </p>
-          <br />
-          <p><em>Open Days: </em>Every Wednesday, 10 - 2pm or by appointment</p>
-          
-          <ul id="membersTop"> <!--membersTop start-->
-          <h2>Committee Members for 2021/ 2022</h2>  
-          <p><em>President: </em>Not exactly sure</p>
-          <p><em>Vice President: </em>Not exactly sure</p>
-          <p><em>Secretary: </em>Wendy Baillie</p>
-          <p><em>Treasurer: </em>Julie Tairua</p>
-          </ul> <!--membersTop end-->
+          <p>Namely, Moondarra, Rawson, Parkers Corner, Coopers Creek, Jubilee, Jacobs Creek, Caringal, Gould and Tyers Junction.
+            We do this by way of :</p>
+            <div class="map"> <!--map start-->
+              <img src="./resources/images/History/map1.jpeg">
+            </div> <!--map end-->
+          <ul id="purposes"> <!--purposes start-->
+          <li><p>The collection, and preservation of materials of historic interest related to the area, including oral histories.</p></li>  
+          <li><p>The provision of a library and archives collection.</p></li>
+          <li><p>The dissemination of knowledge of Erica and her districts history through a newsletter, publications, excursions and all other possible means.</p></li>
+          <li><p>The encouragement of the renovation, preservation and maintenance of historical sites and buildings.</p></li>
+          </ul> <!--purposes end-->
           <br />
           <h2>Upcoming Events</h2>
           <br />
