--- a/historyHistory.html
+++ b/historyHistory.html
@@ -9,12 +9,9 @@
         <div class="heading"> <!--heading start-->
           <h1>Erica & District Historical Society Inc.</h1>
         </div> <!--heading end-->
-        <div class="navigation"> <!--navigation start--> 
+        <div class="navigation"> <!--navigation start-->
           <nav id="nav">
-            <a href="./historyHistory.html"><h4>History</h4></a>
-            <a href="./historyNewsletter.html"><h4>Newsletters</h4></a>
-            <a href="./historyAbout.html"><h4>About</h4></a>
-            <a href="./historyContact.html"><h4>Contact</h4></a>
+            <a href="./history.html"><h4>Home</h4></a>
           </nav>
         </div><!--navigation end-->
         <div class="interior"> <!--interior start-->
@@ -28,13 +25,11 @@
           </p>
           <br />
           <p><em>Open Days: </em>Every Wednesday, 10 - 2pm or by appointment</p>
-          <div class="logo"> <!--logo start-->
-            <img src="./resources/images/History/logo.png">
-          </div> <!--logo end-->
+          
           <ul id="membersTop"> <!--membersTop start-->
           <h2>Committee Members for 2021/ 2022</h2>  
-          <p><em>President: </em>Jenny McNally</p>
-          <p><em>Vice President: </em>Kathleen Harrison</p>
+          <p><em>President: </em>Not exactly sure</p>
+          <p><em>Vice President: </em>Not exactly sure</p>
           <p><em>Secretary: </em>Wendy Baillie</p>
           <p><em>Treasurer: </em>Julie Tairua</p>
           </ul> <!--membersTop end-->
