--- a/historyNewsletter.html
+++ b/historyNewsletter.html
@@ -7,38 +7,24 @@
     <body> <!--body start-->
       <div class="mainContainer"> <!--mainContainer start-->
         <div class="heading"> <!--heading start-->
-          <h1>Erica & District Historical Society</h1>
+          <h1>Erica & District Historical Society Inc.</h1>
         </div> <!--heading end-->
         <div class="navigation"> <!--navigation start-->
           <nav id="nav">
             <a href="./history.html"><h4>Home</h4></a>
-            <a href="#"><h4>History</h4></a>
-            <a href="./historyAbout.html"><h4>About</h4></a>
-            <a href="./historyContact.html"><h4>Contact</h4></a>
           </nav>
         </div><!--navigation end-->
         <div class="interior"> <!--interior start-->
-          <h2>Introduction</h2>
-          <p>The Erica and Districts Historical Society Inc. is a non-profit organization committed to documenting,
-            preserving and promoting the history of our area, run entirely by volunteers.
+          <img id="wave" src="./resources/images/History/top.png">
+          <div class="TT"> <!--logo start-->
+            <img src="./resources/images/History/TT.png">
+          </div> <!--logo end-->
+          <h2>Newsletters</h2>
+          <p>Thopson Times
           </p>
-          <p>The Society was formally incorporated in October of 2014 by a group of residents who recognised the 
-            importance of preserving all aspects of our local history for the benefit of present and future generations.
+          <p>Tall Tree Tales
           </p>
           <br />
-          <p><em>Open Days: </em>Every Wednesday, 10 - 2pm or by appointment</p>
-          <ul id="membersTop"> <!--membersTop start-->
-          <h2>Committee Members for 2021/ 2022</h2>  
-          <p><em>President: </em>Not exactly sure</p>
-          <p><em>Vice President: </em>Not exactly sure</p>
-          <p><em>Secretary: </em>Wendy Baillie</p>
-          <p><em>Treasurer: </em>Julie Tairua</p>
-          </ul> <!--membersTop end-->
-          <br />
-          <h2>Upcoming Events</h2>
-          <br />
-          <p>something at some time.</p>
-          <p>something else at another time.</p>
         </div> <!--interior end-->
       </div> <!--mainContainer end-->
     </body> <!--body end-->
