--- a/history.html
+++ b/history.html
@@ -39,11 +39,42 @@
           <p><em>Treasurer: </em>Julie Tairua</p>
           </ul> <!--membersTop end-->
           <br />
+          
+          <div class="slideshow-container"> <!--Slideshow container start-->
+          <!-- Full-width images with number and caption text -->
+            <div class="mySlides1 fade">
+              <img src="./resources/images/History/Pic1.jpeg" style="width:100%">
+              <div class="text">Sarah Robins & Pricilla Cole. Image courtesy of Robins Family Collection.</div>
+            </div>
+            <div class="mySlides1 fade">
+              <img src="./resources/images/History/pic2.jpeg" style="width:100%">
+              <div class="text">Tom Holmes & Arthur Chapman, Moondarra District. 1915. Image courtesy of Museum Victoria</div>
+            </div>
+            <div class="mySlides1 fade">
+              <img src="./resources/images/History/pic3.jpeg" style="width:100%">
+              <div class="text">Erica school Agriculture block. Head Teacher, James A Towner. 1920. Photographer: W.Edmunds. Image courtesy of Aitken Family Collection.</div>
+          </div> <!--Slideshow Container end-->
           <h2>Upcoming Events</h2>
           <br />
           <p>something at some time.</p>
           <p>something else at another time.</p>
         </div> <!--interior end-->
       </div> <!--mainContainer end-->
+      <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+        let i;
+        let slides = document.getElementsByClassName("mySlides1");
+          for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none"; 
+        }
+            slideIndex++;
+          if (slideIndex > slides.length) {slideIndex = 1} 
+            slides[slideIndex-1].style.display = "block"; 
+            setTimeout(showSlides, 6000); // Change image every 6 seconds
+        }
+        </script>
     </body> <!--body end-->
  </html>
