added to about section and newsletters

--- a/historyAbout.html
+++ b/historyAbout.html
@@ -32,10 +32,37 @@
           <li><p>The encouragement of the renovation, preservation and maintenance of historical sites and buildings.</p></li>
           </ul> <!--purposes end-->
           <br />
-          <h2>Upcoming Events</h2>
           <br />
-          <p>something at some time.</p>
-          <p>something else at another time.</p>
+          <br />
+          <br />
+          <br />
+          <br />
+          <div class="bbmap"> <!--bbmap start-->
+            <img src="./resources/images/History/BricMap.png">
+          </div> <!--bbmap end-->
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <h2>Bric a Brac @ Rawson</h2>
+          <p>We invite you to come see our little store and help us with our funding of our historical society. Bric a Brac @ Rawson is our main 
+            source of funding for the E&DHS and we are honored and thankful for all the support this little gem produces from the help of you, the general public 
+            willing to help us alongthe way.
+          </p>
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <h2>E&DHS Membership</h2>
+          <p>You cal also become a member of E&DHS for a low annual cost.</p>
+          <p><em>Individuals - $15, Family(two Adults) - $25</em></p>
+          <p><em>Due Annually(30th October)</em></p>
+          <p>All new members are confirmed at the monthly meeting after application has been recieved.</p>
+          <p>To apply please feel free to <a href="mailto:ericaanddistricthistorical@gmail.com"><em>Contact us</em></a></p>
         </div> <!--interior end-->
       </div> <!--mainContainer end-->
     </body> <!--body end-->
