--- a/certificates.html
+++ b/certificates.html
@@ -6,20 +6,17 @@
    </head>
    <body>
      <div class="gridbody">
-      <div class="nav">
         <div class="heading">
-          <!--<img id="headingimg" src="./resources/images/me.jpeg">-->
-          <h1 id="headingname">Certifications </h1>
+          <h1>Certifications </h1>
+        </div> <!--heading end-->  
           <div class="navigation">
-            <ul class="nav portfolio">
-            <button><a href="./index.html">Back</a></button>
-            <button><a href="#top">Goto top</a></button>
-          </ul> <!--nav--> 
-          </div> <!--navigation-->
-        </div> <!--heading-->
+            <nav class="nav">
+            <a href="./index.html"><h3>Back</h3></a>
+          </ul> <!--nav end--> 
+          </div> <!--navigation end-->
+        
         <a id="top"></a>
       <div class="mainbody">
-        <div class="certbody">
           <div class="C1">
             <div class="ph2">
               <h2>Codecademy Certificates</h2>
@@ -57,14 +54,10 @@
             </div> <!--paragraphs for portfolio-->
             <img src="./resources/images/Boilermaker.jpeg" alt="Boilermaker and SSF">
           </div> <!--C3-->
-        </div> <!--CERTBODY--> 
       </div> <!--mainbody-->
-      <div class="footer">
-        <img class="foot" src="./resources/images/logo.png" alt="Logo" width="75">
+      <footer>
         <a class="foot name">&copy; Terry Baillie 2022</a>  
-        <a href="http://www.facebook.com/maddarr/" class=" foot facebook"><img id="fb" src="./resources/images/fb.png" width="50"></a> 
-        <a href="http://www.instagram.com/a_fat_aussie_abroad" class=" foot instagram"><img id="fb" src="./resources/images/Insta.png" width="50"></a>
-      </div> <!--footer--> 
+      </footer> <!--footer--> 
     </div> <!--GRIDBODY-->
   </body>
  </html>
