--- a/employment.html
+++ b/employment.html
@@ -7,15 +7,14 @@
    <body>
      <div class="gridbody">
       <div class="heading">
-        <!--<img id="headingimg" src="./resources/images/me.jpeg">-->
-        <h1 id="headingname">About me/ Employment History </h1>
-        <div class="navigation">
-          <ul class="nav portfolio">
-          <button><a href="./index.html">Back</a></button>
-          <button><a href="#top">Goto top</a></button>
-          </ul>  <!--nav-->
-        </div> <!--navigation-->
+        <h1>About me/ Employment History </h1>
       </div> <!--heading-->
+        <div class="navigation">
+          <nav class="nav">
+          <a href="./index.html"><h3>Back</h3></a>
+          </nav>  <!--nav end-->
+        </div> <!--navigation-->
+      
       <a id="top"></a>
       <div class="mainbody">
         <div class="emplymentbody">
@@ -159,12 +158,9 @@
           
         </div> <!--employmentbody--> 
       </div> <!--mainbody-->
-      <div class="footer">
-        <img class="foot" src="./resources/images/logo.png" alt="Logo" width="75">
+      <footer>
         <a class="foot name">&copy; Terry Baillie 2022</a>  
-        <a href="http://www.facebook.com/maddarr/" class=" foot facebook"><img id="fb" src="./resources/images/fb.png" width="50"></a> 
-        <a href="http://www.instagram.com/a_fat_aussie_abroad" class=" foot instagram"><img id="fb" src="./resources/images/Insta.png" width="50"></a>
-      </div> <!--footer--> 
+      </footer> <!--footer--> 
    </div> <!--GRIDBODY-->
    </body>
  </html>
