--- a/certificates.html
+++ b/certificates.html
@@ -25,13 +25,13 @@
               <p>Below are all the certifications I have currently recieved since enrolling in the pro courses at Codecademy.</p>
               <p>Currently I am working on the Front End Engineer Career Path.</p>
             </div> <!--paragraphs for portfolio-->
-            <img src="./resources/images/LCLine.png" alt="Command Line">
-            <img src="./resources/images/LCSS.png" alt="CSS Beginer">
-            <img src="./resources/images/LCSSInter.png" alt="CSS Intermediate">
-            <img src="./resources/images/LHTML.png" alt="HTML">
-            <img src="./resources/images/LP3.png" alt="Python3">
-            <img src="./resources/images/Web.jpg" alt="Build a webpage">
-            <img src="./resources/images/LJS.png" alt="Java Script">
+            <img src="./resources/images/LCLine.png" alt="Command Line" style="width:100%">
+            <img src="./resources/images/LCSS.png" alt="CSS Beginer" style="width:100%">
+            <img src="./resources/images/LCSSInter.png" alt="CSS Intermediate" style="width:100%">
+            <img src="./resources/images/LHTML.png" alt="HTML" style="width:100%">
+            <img src="./resources/images/LP3.png" alt="Python3" style="width:100%">
+            <img src="./resources/images/Web.jpg" alt="Build a webpage" style="width:100%">
+            <img src="./resources/images/LJS.png" alt="Java Script" style="width:100%">
           </div> <!--C1-->
           <br />
           <div class="C2">
@@ -41,8 +41,8 @@
              <div class="c port">
               <p>These are my Certifications that I held as a Quality Control Supervisor and Weld Inspector. Because I no longer work for the company they have not be renewed, However my quantity of hours in method stand at over 13K in Visual Inspection and over 9K in Penetrant Inspection both at Level 2.</p>
             </div> <!--paragraphs for portfolio-->
-            <img src="./resources/images/PTLVL2.jpeg" alt="PT Level 2">
-            <img src="./resources/images/VTLVL2.jpeg" alt="VT Level 2">
+            <img src="./resources/images/PTLVL2.jpeg" alt="PT Level 2" style="width:100%">
+            <img src="./resources/images/VTLVL2.jpeg" alt="VT Level 2" style="width:100%">
           </div> <!--C2-->
           <br />
           <div class="C3">
@@ -52,7 +52,7 @@
              <div class="c port">
               <p>This is the certification that I completed my 4 year college Apprenticeship for Boilermaker and Structural Steel Fabrication.
             </div> <!--paragraphs for portfolio-->
-            <img src="./resources/images/Boilermaker.jpeg" alt="Boilermaker and SSF">
+            <img src="./resources/images/Boilermaker.jpeg" alt="Boilermaker and SSF" style="width:100%">
           </div> <!--C3-->
       </div> <!--mainbody-->
       <footer>
